Fix design, dark mode and keyboard navigation of the board list

--- a/css/collections.css
+++ b/css/collections.css
@@ -1,7 +1,3 @@
-.icon-deck {
-	background-image: url('../img/deck-dark.svg');
-}
-
 .resource-type-deck img {
 	opacity: 0.4 !important;
 }
