--- a/css/icons.scss
+++ b/css/icons.scss
@@ -1,80 +1,26 @@
 /**
  * Custom icons
  */
-.icon-deck {
-	background-image: url('../img/deck-dark.svg');
-}
-
-.icon-help {
-	background-image: url('../../../settings/img/help.svg');
-}
-
-.icon-add-white {
-	background-image: url('../img/add-white.svg');
-}
-
-.icon-attach {
-	background-image: url('../img/attach.svg');
-}
-
-.icon-archive {
-	background-image: url('../img/archive.svg');
-}
-
-.icon-archive-white {
-	background-image: url('../img/archive-white.svg');
-}
-
-.icon-details {
-	background-image: url('../img/details.svg');
-}
-
-.icon-details-white {
-	background-image: url('../img/details-white.svg');
-}
-
-.icon-home {
-	background-image: var(--icon-home-000, url('../../../core/img/places/home.svg'));
-}
-
-.icon-description {
-	background-image: var(--icon-text-000, url('../img/description.svg'));
-}
-
-.icon-badge {
-	background-image: url('../img/calendar-dark.svg');
-}
+@include icon-black-white('deck', 'deck', 1);
+@include icon-black-white('archive', 'deck', 1);
+@include icon-black-white('circles', 'deck', 1);
+@include icon-black-white('clone', 'deck', 1);
+@include icon-black-white('filter', 'deck', 1);
+@include icon-black-white('filter_set', 'deck', 1);
+@include icon-black-white('attach', 'deck', 1);
+@include icon-black-white('reply', 'deck', 1);
 
 .icon-toggle-compact-collapsed {
-	background-image: url('../img/toggle-view-expand.svg');
+	@include icon-color('toggle-view-expand', 'deck', $color-black);
 }
 
 .icon-toggle-compact-expanded {
-	background-image: url('../img/toggle-view-collapse.svg');
+	@include icon-color('toggle-view-collapse', 'deck', $color-black);
+}
+.icon-activity {
+	@include icon-color('activity-dark', 'activity', $color-black);
 }
 
-
-@if mixin-exists('icon-black-white') {
-	@include icon-black-white('deck', 'deck', 1);
-	@include icon-black-white('archive', 'deck', 1);
-	@include icon-black-white('circles', 'deck', 1);
-	@include icon-black-white('clone', 'deck', 1);
-	@include icon-black-white('filter', 'deck', 1);
-	@include icon-black-white('filter_set', 'deck', 1);
-	@include icon-black-white('attach', 'deck', 1);
-	@include icon-black-white('reply', 'deck', 1);
-
-	.icon-toggle-compact-collapsed {
-		@include icon-color('toggle-view-expand', 'deck', $color-black);
-	}
-
-	.icon-toggle-compact-expanded {
-		@include icon-color('toggle-view-collapse', 'deck', $color-black);
-	}
-	.icon-activity {
-		@include icon-color('activity-dark', 'activity', $color-black);
-	}
-}
 
 .avatardiv.circles {
 	background: var(--color-primary);
